FIRST COMMIT BY CHINDRALLA

--- a/AGILE PROJCT.html
+++ b/AGILE PROJCT.html
@@ -80,6 +80,11 @@ COMMUNICATION ADDRESS:</td></tr><tr>
 	
 			document.getElementById("pin1").disabled=false;
 	}
+	function enable5()
+	{
+	
+			document.getElementById("pin1").disabled=false;
+	}
 	function enable3()
 	{	
 			document.getElementById("area2").disabled=false;
